# benchcad-2

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESIGN.md  LICENSE  README.md  REVIEWING.md  STATUS.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  expert-contribution.yml  family-request.yml  feature-request.yml
.github/scripts/: gen_credits.py  gen_registry.py
.github/workflows/: credits.yml  dossier.yml  family-pr-checks.yml  label-issues.yml  pr-welcome.yml  publish-agent-stub.yml  publish-stub.yml  registry.yml  require-issue-link.yml  validate-report.yml  validate.yml  welcome.yml
designs/articulating_monitor_arm_vesa_plate/: family.json  part.py  spec.py
designs/ball_bearing_drawer_slide/: family.json  part.py  spec.py
designs/cabinet_bar_pull_handle/: family.json  part.py  spec.py
designs/drum_tension_lug/: family.json  part.py  spec.py
designs/duct_takeoff_starting_collar/: family.json  part.py  spec.py
designs/guitar_tuning_machine_head/: family.json  part.py  spec.py
designs/minifix_cam_housing/: NOTES.md  family.json  part.py  spec.py
designs/quarter_turn_cam_latch/: family.json  part.py  spec.py
designs/round_duct_butterfly_damper/: family.json  part.py  spec.py
designs/set_screw_shaft_collar/: NOTES.md  family.json  part.py  spec.py
designs/single_row_deep_groove_ball_bearing/: NOTES.md  family.json  part.py  spec.py
designs/slotted_din_rail/: family.json  part.py  spec.py
docs/: DEBUGGING.md  DESIGN_SPEC.md  GETTING_STARTED.md  GETTING_STARTED.zh.md  WALKTHROUGH.md  WALKTHROUGH.zh.md
pypi-stub/benchcad-agent/: README.md  pyproject.toml
pypi-stub/benchcad-agent/src/benchcad_agent/: __init__.py
tools/: debug_family.py
(+24 files in other folders)
