[project]
name = "benchcad-agent"
version = "0.1.0"
description = "Official package name for the BenchCAD benchmark suite (placeholder release; the evaluation engine lives on GitHub)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
[project.urls]
Homepage = "https://benchcad.com"
GitHub = "https://github.com/BenchCAD/BenchCAD-main"
Organization = "https://github.com/BenchCAD-org"
[project.scripts]
benchcad-agent = "benchcad_agent:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/benchcad_agent"]
